--- a/Lending_Club_Case_Study.ipynb
+++ b/Lending_Club_Case_Study.ipynb
@@ -6277,7 +6277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 202,
    "id": "c95b2cda",
    "metadata": {},
    "outputs": [
@@ -6312,7 +6312,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th>loan_status</th>\n",
-       "      <th>pub_rec_bankruptcies</th>\n",
+       "      <th>revol_util_bins</th>\n",
        "      <th>Charged Off</th>\n",
        "      <th>Current</th>\n",
        "      <th>Fully Paid</th>\n",
@@ -6322,45 +6322,103 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4939</td>\n",
-       "      <td>1021</td>\n",
-       "      <td>29562</td>\n",
-       "      <td>14.315527</td>\n",
+       "      <td>0-10</td>\n",
+       "      <td>421</td>\n",
+       "      <td>82</td>\n",
+       "      <td>3774</td>\n",
+       "      <td>10.035757</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>361</td>\n",
-       "      <td>35</td>\n",
-       "      <td>1240</td>\n",
-       "      <td>22.548407</td>\n",
+       "      <td>10-20</td>\n",
+       "      <td>325</td>\n",
+       "      <td>68</td>\n",
+       "      <td>2845</td>\n",
+       "      <td>10.252366</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>40.000000</td>\n",
+       "      <td>20-30</td>\n",
+       "      <td>408</td>\n",
+       "      <td>97</td>\n",
+       "      <td>3158</td>\n",
+       "      <td>11.441391</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>30-40</td>\n",
+       "      <td>492</td>\n",
+       "      <td>109</td>\n",
+       "      <td>3355</td>\n",
+       "      <td>12.789186</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>40-50</td>\n",
+       "      <td>585</td>\n",
+       "      <td>114</td>\n",
+       "      <td>3456</td>\n",
+       "      <td>14.476615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>50-60</td>\n",
+       "      <td>602</td>\n",
+       "      <td>123</td>\n",
+       "      <td>3419</td>\n",
+       "      <td>14.971400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>60-70</td>\n",
+       "      <td>633</td>\n",
+       "      <td>140</td>\n",
+       "      <td>3296</td>\n",
+       "      <td>16.110970</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>70-80</td>\n",
+       "      <td>675</td>\n",
+       "      <td>123</td>\n",
+       "      <td>3034</td>\n",
+       "      <td>18.198975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>80-90</td>\n",
+       "      <td>657</td>\n",
+       "      <td>117</td>\n",
+       "      <td>2738</td>\n",
+       "      <td>19.351988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>90-100</td>\n",
+       "      <td>617</td>\n",
+       "      <td>84</td>\n",
+       "      <td>2278</td>\n",
+       "      <td>21.312608</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "loan_status  pub_rec_bankruptcies  Charged Off  Current  Fully Paid  \\\n",
-       "0                             0.0         4939     1021       29562   \n",
-       "1                             1.0          361       35        1240   \n",
-       "2                             2.0            2        1           3   \n",
-       "\n",
-       "loan_status  Charged_off%  \n",
-       "0               14.315527  \n",
-       "1               22.548407  \n",
-       "2               40.000000  "
+       "loan_status revol_util_bins  Charged Off  Current  Fully Paid  Charged_off%\n",
+       "0                      0-10          421       82        3774     10.035757\n",
+       "1                     10-20          325       68        2845     10.252366\n",
+       "2                     20-30          408       97        3158     11.441391\n",
+       "3                     30-40          492      109        3355     12.789186\n",
+       "4                     40-50          585      114        3456     14.476615\n",
+       "5                     50-60          602      123        3419     14.971400\n",
+       "6                     60-70          633      140        3296     16.110970\n",
+       "7                     70-80          675      123        3034     18.198975\n",
+       "8                     80-90          657      117        2738     19.351988\n",
+       "9                    90-100          617       84        2278     21.312608"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6376,7 +6434,7 @@
     "ax1.set_ylabel('Chargedoff%',fontsize=30)\n",
     "ax1.set_xlabel('Revol. Util',fontsize=30)\n",
     "plt.show()\n",
-    "dlq_category_pivot\n",
+    "ru_category_pivot\n",
     "\n",
     "# charge off continuously increase with higher revol_util"
    ]
